test/Fail/Issue2386BuiltinEqualityExtraArg.err
Issue2386BuiltinEqualityExtraArg.agda:9.1-29: error: [GenericError]
The type of BUILTIN EQUALITY must be a polymorphic relation
when checking the pragma BUILTIN EQUALITY _≡_
